--- a/gym.html
+++ b/gym.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Orbitron:700|Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Orbitron:700|Baloo&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/eaedda9ae5.js"></script>
     <title>Document</title>
 </head>
@@ -45,8 +45,13 @@
   </div>
 </nav>
 <!--gym-->
-<div class="section" id="gym"><br><br>
-  <div class="sectionheader">THE GYM</div>
+<!--gym-->
+<div class="jumbotron jumbotron-fluid" id="gymHeader">
+  <div class="container">
+    <h3 class="display-4">THE GYM</h3>
+  </div>
+</div>
+<div class="section" id="gym">
 <div class="row">
   <div class="col-sm-12 d-sm-block d-md-none">
     <img src="images/gym1.jpg" alt="gym1" style="width:100%">
@@ -70,7 +75,7 @@
   </div>
 </div>
   <div class="row">
-    <div class="col-md-6 d-sm-none d-md-inline-block"  id="gymcarousel">
+    <div class="col-md-6" id="gymcarousel">
       <div id="carouselControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -106,11 +111,10 @@
   </a>
 </div>
 </div>
-
   <div class="col-sm-12 col-md-6 d-inline-block">
     <h3>Our facilities</h3>
-    <ul id="gym">
-      <li>State-of-the-art cardiovascular, free weights and resistance training equipment</li>
+    <ul>
+      <li>State-of-the-art cardiovascular and resistance training equipment</li>
       <li>2 boxing rings</li>
       <li>Lounge area with phone charging stations</li>
       <li>Rental shoe lockers</li>
@@ -222,7 +226,6 @@
       </div>
     </div>
   </div>
-</div>
 </div>
 </div>
 </div>
