--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Orbitron:700|Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Orbitron:700|Baloo&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/eaedda9ae5.js"></script>
     <title>Document</title>
 </head>
@@ -45,8 +45,12 @@
   </div>
 </nav>
 <!--contact-->
-<div class="section" id="contact"><br><br>
-  <div class="sectionheader">CONTACT US</div>
+<div class="jumbotron jumbotron-fluid" id="contactHeader">
+  <div class="container">
+    <h3 class="display-4">CONTACT US</h3>
+  </div>
+</div>
+<div class="section" id="contact">
   <div class="row">
     <div class="col-sm-12 col-md-4">
       <h3>Our location</h3>
@@ -57,7 +61,7 @@
       <h3>Come try us out!</h3>
             <p>Start your Ninja journey with a Complimentary Introductory Class of your choice! Experience and learn the basic techniques with our professional instructors - we guaranteed you will be hooked!</p>
             <ul>
-              <li><a href=""><i class="fas fa-envelope-open-text" id="fa"></i></a>  ninjagymsg@gmail.com</li>
+              <li><a href="mailto:someone@example.com"><i class="fas fa-envelope-open-text" id="fa"></i></a>  ninjagymsg@gmail.com</li>
               <li><a href="#"><i class="fab fa-facebook" style="color:#3b5998" id="fa"></i></a> facebook.com/fightclub</li>
               <li><a href="#"><i class="fab fa-twitter" style="color:#1da1f2" id="fa"></i></a>   https://t.co/HyNW4tByaR</li>
               <li><a href="#"><i class="fab fa-instagram" style="color:red" id="fa"></i></a>  @fightclubsg</li>
@@ -66,7 +70,7 @@
               <li id="hidden"><a href="#"><i class="far fa-clock" style="color:transparent"  id="fa"></i></a> Wed - Thurs: 8am to 6pm </li>
             </ul>
     </div>
-    <div class="col-sm-12 col-md-4">
+    <div class="col-sm-12 col-md-4" id="linkForm">
       <h3>Contact form</h3>
           <p>Or if you prefer, leave your contact information and we will get back to you ASAP.</p>
           <div class="contactform">
