--- a/schedule.html
+++ b/schedule.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Orbitron:700|Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Orbitron:700|Baloo&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/eaedda9ae5.js"></script>
     <title>Document</title>
 </head>
@@ -45,13 +45,17 @@
   </div>
 </nav>  
 <!--schedule-->
-<div class="section"><br><br>
-  <div class="sectionheader">CLASS SCHEDULE</div>
+<div class="jumbotron jumbotron-fluid" id="timeHeader">
+  <div class="container">
+    <h3 class="display-4">CLASS SCHEDULE</h3>
+  </div>
+</div>
+<div class="section" id="schedule">
   <div class="row">
-    <div class="col-sm-12">
+  <div class="col-sm-12">
   <p>Each course at Ninja Gym has been carefully developed in order to maximize your learning in the least amount of time. All age groups, genders, skill levels, and fitness levels are welcome. Classes are limited to 15 participants per session to ensure that everyone gets personalized attention from our instructors.</p>
  </div>
-    <div class="col-sm-12 d-sm-block d-md-none btn-group" role="group" id="parent">
+    <div class="col-sm-12 d-md-block d-lg-none btn-group" role="group" id="parent">
     <div class="btn-group" role="group">
     <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
       Mon
@@ -158,7 +162,7 @@
     <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Thu
     </button>
-    <div class="dropdown-menu">
+    <div class="dropdown-menu dropdown-menu-center">
       <table class="dropdown-item table-hover">
      <tr>
     <th>Time</th>
@@ -294,7 +298,7 @@
 </div>
     <div class="space"><br><br><br><br><br><br><br></space></div>
   <div class="row" id="table">
-    <div class="col-sm-12 table-responsive">
+    <div class="col-sm-12 table-responsive d-none d-md-block">
     <table class="schedule">
     <thead>
     <tr>
@@ -521,7 +525,5 @@
 </div>
     </div>
   </div>
-</div>
-</div>
     </body>
     </html>
