--- a/pricing.html
+++ b/pricing.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Orbitron:700|Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Orbitron:700|Baloo&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/eaedda9ae5.js"></script>
     <title>Document</title>
 </head>
@@ -45,8 +45,12 @@
   </div>
 </nav>
 <!--pricing-->
-<div class="section" id="pricing"><br><br>
-  <div class="sectionheader">OUR RATES</div>
+<div class="jumbotron jumbotron-fluid" id="priceHeader">
+  <div class="container">
+    <h3 class="display-4">OUR RATES</h3>
+  </div>
+</div>
+<div class="section" id="pricing">
   <div class="row">
     <div class="column" id="pricelist">
       <h3>Single class</h3>
