minor changes from testing

--- a/instructors.html
+++ b/instructors.html
@@ -45,21 +45,21 @@
   </div>
 </nav>
 <!--instructors-->
-<div class="jumbotron jumbotron-fluid" id="instHeader">
-  <div class="container">
-    <h3 class="display-4">OUR INSTRUCTORS</h3>
-  </div>
-</div>
-<div class="section" id="instructors">
-  <div class="row">
-    <div class="col-sm-12">
-      <h3>Our instructors</h3>
-      <p>Our instructors have competed and won in the most prestigious global martial arts competitions. They bring with them over 100 years of cumulative world championship experience. Click on their photos to read more about their backgrounds.</p>
+ <div class="jumbotron jumbotron-fluid" id="Header2">
+    <div class="container">
+      <h3 class="display-4">OUR INSTRUCTORS</h3>
     </div>
   </div>
-  <div class="row" id="boxer">
-    <div class="col-sm-12 col-md-6">
-      <div class="flip-card">
+  <div class="section" id="instructors">
+    <div class="row">
+      <div class="col-sm-12">
+        <h3>Our instructors</h3>
+        <p>Our instructors have competed and won in the most prestigious global martial arts competitions. They bring with them over 100 years of cumulative world championship experience. Click on their photos to read more about their backgrounds.</p>
+      </div>
+    </div>
+    <div class="row" id="boxer">
+      <div class="col-sm-12 col-md-6">
+        <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="images/boxer1.jpg" alt="boxer1" class="img-fluid">
@@ -75,9 +75,9 @@
             </div>
           </div>
         </div>
-    </div>
-    <div class="col-sm-12 col-md-6" id="boxer">
-      <div class="flip-card">
+      </div>
+      <div class="col-sm-12 col-md-6" id="boxer">
+        <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="images/boxer2.jpg" alt="boxer2" class="img-fluid">
@@ -93,11 +93,11 @@
             </div>
           </div>
         </div>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-12 col-md-6" id="boxer">
-      <div class="flip-card">
+    <div class="row">
+      <div class="col-sm-12 col-md-6" id="boxer">
+        <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="images/boxer3.jpg" alt="boxer3" class="img-fluid">
@@ -113,9 +113,9 @@
             </div>
           </div>
         </div>
-    </div>
-    <div class="col-sm-12 col-md-6" id="boxer">
-      <div class="flip-card">
+      </div>
+      <div class="col-sm-12 col-md-6" id="boxer">
+        <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="images/boxer4.jpg" alt="boxer4" class="img-fluid">
@@ -131,11 +131,11 @@
             </div>
           </div>
         </div>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-12 col-md-6" id="boxer">
-      <div class="flip-card">
+    <div class="row">
+      <div class="col-sm-12 col-md-6" id="boxer">
+        <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="images/boxer5.jpg" alt="boxer5" class="img-fluid">
@@ -151,9 +151,9 @@
             </div>
           </div>
         </div>
-    </div>
-    <div class="col-sm-12 col-md-6" id="boxer">
-      <div class="flip-card">
+      </div>
+      <div class="col-sm-12 col-md-6" id="boxer">
+        <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="images/boxer6.jpg" alt="boxer6" class="img-fluid">
@@ -169,8 +169,8 @@
             </div>
           </div>
         </div>
+      </div>
     </div>
   </div>
-</div>  
 </body>
 </html>
