--- a/pricing.html
+++ b/pricing.html
@@ -45,44 +45,51 @@
   </div>
 </nav>
 <!--pricing-->
-<div class="jumbotron jumbotron-fluid" id="priceHeader">
-  <div class="container">
-    <h3 class="display-4">OUR RATES</h3>
+  <div class="jumbotron jumbotron-fluid" id="Header3">
+    <div class="container">
+      <h3 class="display-4">OUR RATES</h3>
+    </div>
   </div>
-</div>
-<div class="section" id="pricing">
-  <div class="row">
-    <div class="column" id="pricelist">
-      <h3>Single class</h3>
-        <p>One drop-in class</p>
+  <div class="section" id="pricing">
+    <div class="row">
+      <div class="col-md-12 col-lg-4"> 
+        <div id="pricelist">
+          <h3>Single class</h3>
+          <p>One drop-in class</p>
           <div id="price">$20</div>
-        <p>Drop in for classes without any commitment</p>
-    </div>
-    <div class="column" id="pricelist">
-      <h3>Ten class pack</h3>
-        <p>Save more </p>
+          <p>Drop in for classes without any commitment</p>
+        </div>
+      </div>
+      <div class="col-md-12 col-lg-4"> 
+        <div id="pricelist">
+          <h3>Ten class pack</h3>
+          <p>Box more, save more</p>
           <div id="price">$190</div>
-        <p>Expires after 2 months</p>
-    </div>
-    <div class="column" id="pricelist">
-      <h3>1 month unlimited</h3>
-        <p>Auto-renews every month</p>
+          <p>To be used within a maximum period of 2 months</p>
+        </div>
+      </div>
+      <div class="col-md-12 col-lg-4">
+        <div id="pricelist">
+          <h3>1 month unlimited</h3>
+          <p>Auto-renews every month</p>
           <div id="price">$150</div>
-        <p>Hassle free and cost-effective for regulars</p>
+          <p>Hassle free and cost-effective for regulars</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 d-md-none d-lg-block" id="video">
+        <div class="col-sm-12-md-6 resp-container">
+          <iframe class="resp-iframe" id="video" src="https://www.youtube.com/embed/AJHAUo-1X54?start=210&end=221" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6" id="corporate">
+        <br>
+        <h3>Corporate programs</h3>
+        <p>At Ninja Gym, we believe that a healthy workplace equals a healthy business. Through our diverse range of martial arts programs, we will  help your employees achieve good health, fitness, mental strength, confidence, and a balanced life, which leads to increased employee productivity and enhanced profitability. Consider it an investment in your most valuable asset, your employees.</p>
+        <a class="button enquire" href="#linkForm">Enquire now!</a>
+      </div>
     </div>
   </div>
-  <div class="row">
-<div class="col-md-6" id="video">
-<iframe width="560" height="315" id="video" src="https://www.youtube.com/embed/AJHAUo-1X54?start=210&end=221" frameborder="0" allowfullscreen></iframe>
-
-</div>    
-<div class="col-sm-12 col-md-6" id="corporate">
-  <br>
-      <h3>Corporate programs</h3>
-      <p>At Ninja Gym, we believe that a healthy workplace equals a healthy business. Through our diverse range of martial arts programs, we will  help your employees achieve good health, fitness, mental strength, confidence, and a balanced life, which leads to increased employee productivity and enhanced profitability. Consider it an investment in your most valuable asset, your employees.</p>
-      <a class="button enquire" href="#linkForm">Enquire now!</a>
-    </div>
-  </div>
-</div>
 </body>
 </html>
