--- a/contact.html
+++ b/contact.html
@@ -45,56 +45,62 @@
   </div>
 </nav>
 <!--contact-->
-<div class="jumbotron jumbotron-fluid" id="contactHeader">
-  <div class="container">
-    <h3 class="display-4">CONTACT US</h3>
+   <div class="jumbotron jumbotron-fluid" id="Header5">
+    <div class="container">
+      <h3 class="display-4">CONTACT US</h3>
+    </div>
   </div>
-</div>
-<div class="section" id="contact">
-  <div class="row">
-    <div class="col-sm-12 col-md-4">
-      <h3>Our location</h3>
+  <div class="section" id="contact">
+    <div class="row">
+      <div class="col-lg-12 col-xl-4">
+        <h3>Our location</h3>
         <p>We are a convenient 2 minutes walk from Kent Ridge MRT. Free parking is also available at the open air carpark next to us.</p>
-        <div><iframe width="400" height="400" src="https://maps.google.com/maps?width=100%&amp;height=450&amp;hl=en&amp;coord=1.3043811,103.772497&amp;q=2%20College%20Ave%20West%2C%20Singapore%20138607+(Ninja%20Gym)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
-    </div>
-    <div class="col-sm-12 col-md-4">
-      <h3>Come try us out!</h3>
-            <p>Start your Ninja journey with a Complimentary Introductory Class of your choice! Experience and learn the basic techniques with our professional instructors - we guaranteed you will be hooked!</p>
-            <ul>
-              <li><a href="mailto:someone@example.com"><i class="fas fa-envelope-open-text" id="fa"></i></a>  ninjagymsg@gmail.com</li>
-              <li><a href="#"><i class="fab fa-facebook" style="color:#3b5998" id="fa"></i></a> facebook.com/fightclub</li>
-              <li><a href="#"><i class="fab fa-twitter" style="color:#1da1f2" id="fa"></i></a>   https://t.co/HyNW4tByaR</li>
-              <li><a href="#"><i class="fab fa-instagram" style="color:red" id="fa"></i></a>  @fightclubsg</li>
-              <li><a href="#"><i class="fas fa-phone-volume" style="color:lime"  id="fa"></i></a>  +65 9480 8908</li>
-              <li><a href="#"><i class="far fa-clock" style="color:orange"  id="fa"></i></a> Fri - Tues: 8am to 9pm </li>
-              <li id="hidden"><a href="#"><i class="far fa-clock" style="color:transparent"  id="fa"></i></a> Wed - Thurs: 8am to 6pm </li>
-            </ul>
-    </div>
-    <div class="col-sm-12 col-md-4" id="linkForm">
-      <h3>Contact form</h3>
-          <p>Or if you prefer, leave your contact information and we will get back to you ASAP.</p>
-          <div class="contactform">
-          <form action="#" method="GET">
-            <fieldset>
-              <input id="firstname" name="firstname" type="text" placeholder="Name" required><br><br>
-              <input id="lastname" name="lastname" type="text" placeholder="Surname" required><br><br>
-              <input id="phone" name="phone" type="number" maxlength="8" minlength="8" placeholder="Mobile number" required><br><br>
-              <input id="email" name="email" placeholder="Email address" required><br><br>
-              <label for="time">*Experience level:</label>
-              <select name="experience" id="experience">
-                <option value="beginner"></option>
-                <option value="beginner">Beginner</option>
-                <option value="some">Some boxing experience</option>
-                <option value="expert">Expert</option>
-                <option value="competition">Competition level</option>
-              </select> <br><br>
-              <textarea rows="6" cols="52" placeholder="Ask away"></textarea><br><br>
-              <input type="submit" value="Submit">
-            </fieldset>
-          </form>
+        <div class="resp-container"><iframe class="resp-iframe" src="https://maps.google.com/maps?width=100%&amp;height=450&amp;hl=en&amp;coord=1.3043811,103.772497&amp;q=2%20College%20Ave%20West%2C%20Singapore%20138607+(Ninja%20Gym)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
         </div>
+      <div class="col-sm-12 col-lg-6 col-xl-4">
+        <h3>Come try us out!</h3>
+        <p>Start your Ninja journey with a Complimentary Introductory Class of your choice! Experience and learn the basic techniques with our professional instructors - we guaranteed you will be hooked!</p>
+          <ul>
+            <li><a href="mailto:someone@example.com"><i class="fas fa-envelope-open-text" id="fa"></i>  ninjagymsg@gmail.com</a></li>
+            <li><a href="https://www.google.com/"><i class="fab fa-facebook" style="color:#3b5998" id="fa"></i> facebook.com/fightclub</a></li>
+            <li><a href="https://www.google.com/"><i class="fab fa-twitter" style="color:#1da1f2" id="fa"></i>   https://t.co/HyNW4tByaR</a></li>
+            <li><a href="https://www.google.com/"><i class="fab fa-instagram" style="color:red" id="fa"></i>  @fightclubsg</a></li>
+            <li><i class="fas fa-phone-volume" style="color:green"  id="fa"></i>  +65 9480 8908</li>
+            <li><i class="far fa-clock" style="color:orange"  id="fa"></i></a> Fri - Tues: 8am to 9pm</li>
+            <li id="hidden"><i class="far fa-clock" style="color:transparent"  id="fa"></i> Wed - Thurs: 8am to 6pm </li>
+          </ul>
+      </div>
+      <div class="col-sm-12 col-lg-6 col-xl-4" id="linkForm">
+        <h3>Contact form</h3>
+        <p>Or if you prefer, leave your contact information and we will get back to you ASAP.</p>
+          <div class="contactform">
+            <form action="https://formspree.io/email@domain.tld" method="POST" />
+              <fieldset>
+                <input id="firstname" name="firstname" type="text" placeholder="Name" required><br><br>
+                <input id="lastname" name="lastname" type="text" placeholder="Surname" required><br><br>
+                <input id="phone" name="phone" type="number" maxlength="8" minlength="8" placeholder="Mobile number" required><br><br>
+                <input id="email" name="email" placeholder="Email address" required><br><br>
+                <label for="time">*Experience level:</label>
+                <select name="experience" id="experience">
+                  <option value="beginner"></option>
+                  <option value="beginner">Beginner</option>
+                  <option value="some">Some boxing experience</option>
+                  <option value="expert">Expert</option>
+                  <option value="competition">Competition level</option>
+                </select> 
+                <br><br>
+                <textarea rows="6" cols="52" placeholder="Ask away"></textarea><br><br>
+                <input type="submit" value="Submit">
+              </fieldset>
+            </form>
+          </div>
+      </div>
+    <div class="row">
+      <div class="col-sm-12 btp d-xs-block d-sm-block d-md-none" id="btp">
+        <a href="index.html">Back to Top</a>
+      </div>
     </div>
   </div>
-</div>
+  </div>
 </body>
 </html>
