--- a/gym.html
+++ b/gym.html
@@ -44,190 +44,194 @@
     </ul>
   </div>
 </nav>
-<!--gym-->
-<!--gym-->
-<div class="jumbotron jumbotron-fluid" id="gymHeader">
-  <div class="container">
-    <h3 class="display-4">THE GYM</h3>
+
+<div class="jumbotron jumbotron-fluid" id="Header1">
+    <div class="container">
+      <h3 class="display-4">THE GYM</h3>
+    </div>
   </div>
-</div>
-<div class="section" id="gym">
-<div class="row">
-  <div class="col-sm-12 d-sm-block d-md-none">
-    <img src="images/gym1.jpg" alt="gym1" style="width:100%">
+  <div class="section" id="gym">
+    <div class="row">
+      <div class="col-sm-12 d-md-block d-lg-none">
+        <img src="images/gym1.jpg" alt="gym1" style="width:100%">
+      </div>
+      <div class="col-sm-12 d-md-block d-lg-none">
+        <img src="images/gym2.jpg" alt="gym2" style="width:100%">
+      </div>
+    </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h3>Training philosophy</h3>
+      <p>Our goal is to help you to evolve into everything that you can be. The Ninja Motto is Unleash Your Greatness since it is about your journey to unleashing your potential as a human being. All our courses are rooted in reality. You will learn self-defense for the real world and you will develop a keen understanding of how to protect yourself in real life. Every single technique taught at the Ninja Gym is battle-tested and street-certified.
+    </div>
   </div>
-  <div class="col-sm-12 d-sm-block d-md-none">
-    <img src="images/gym2.jpg" alt="gym2" style="width:100%">
+  <div class="row">
+    <div class="col-sm-12 d-md-block d-lg-none">
+      <img src="images/gym3.jpg" alt="gym3" style="width:100%">
+    </div>
+    <div class="col-sm-12 d-md-block d-lg-none">
+      <img src="images/gym4.jpg" alt="gym4" style="width:100%">
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-sm-12">
-    <h3>Training philosophy</h3>
-    <p>Our goal is to help you to evolve into everything that you can be. The Ninja Motto is Unleash Your Greatness since it is about your journey to unleashing your potential as a human being. All our courses are rooted in reality. You will learn self-defense for the real world and you will develop a keen understanding of how to protect yourself in real life. Every single technique taught at the Ninja Gym is battle-tested and street-certified.
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-12 d-sm-block d-md-none">
-    <img src="images/gym3.jpg" alt="gym3" style="width:100%">
-  </div>
-  <div class="col-sm-12 d-sm-block d-md-none">
-    <img src="images/gym4.jpg" alt="gym4" style="width:100%">
-  </div>
-</div>
+  
+  <!--image carousel for desktop-->
   <div class="row">
     <div class="col-md-6" id="gymcarousel">
       <div id="carouselControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images/gym1.jpg" class="d-block w-100" alt="gym1">
-    </div>
-    <div class="carousel-item">
-      <img src="images/gym2.jpg" class="d-block w-100" alt="gym2">
-    </div>
-    <div class="carousel-item">
-      <img src="images/gym3.jpg" class="d-block w-100" alt="gym3">
-    </div>
-    <div class="carousel-item">
-      <img src="images/gym4.jpg" class="d-block w-100" alt="gym4">
-    </div>
-    <div class="carousel-item">
-      <img src="images/gym5.jpg" class="d-block w-100" alt="gym5">
-    </div>
-    <div class="carousel-item">
-      <img src="images/gym6.jpg" class="d-block w-100" alt="gym6">
-    </div>
-    <div class="carousel-item">
-      <img src="images/gym7.jpg" class="d-block w-100" alt="gym7">
-    </div>
-    <div class="carousel-item">
-      <img src="images/gym8.jpg" class="d-block w-100" alt="gym8">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
-</div>
-</div>
-  <div class="col-sm-12 col-md-6 d-inline-block">
-    <h3>Our facilities</h3>
-    <ul>
-      <li>State-of-the-art cardiovascular and resistance training equipment</li>
-      <li>2 boxing rings</li>
-      <li>Lounge area with phone charging stations</li>
-      <li>Rental shoe lockers</li>
-      <li>Free usage of boxing gloves and wraps</li>
-      <li>Complimentary towel service</li>
-      <li>Free wifi access</li>
-      <li>12 free standing heavy bags</li>
-      <li>Spacious locker rooms with steam and sauna facilities</li>
-      <li>Over 20,500 sq ft space with world-class design features</li>
-      <li>InBody body composition analysis machine </li>
-      <li>2 competition-sized boxing rings</li>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/gym1.jpg" class="d-block w-100" alt="gym1">
+          </div>
+          <div class="carousel-item">
+            <img src="images/gym2.jpg" class="d-block w-100" alt="gym2">
+          </div>
+          <div class="carousel-item">
+            <img src="images/gym3.jpg" class="d-block w-100" alt="gym3">
+          </div>
+          <div class="carousel-item">
+            <img src="images/gym4.jpg" class="d-block w-100" alt="gym4">
+          </div>
+          <div class="carousel-item">
+            <img src="images/gym5.jpg" class="d-block w-100" alt="gym5">
+          </div>
+          <div class="carousel-item">
+            <img src="images/gym6.jpg" class="d-block w-100" alt="gym6">
+          </div>
+          <div class="carousel-item">
+            <img src="images/gym7.jpg" class="d-block w-100" alt="gym7">
+          </div>
+          <div class="carousel-item">
+            <img src="images/gym8.jpg" class="d-block w-100" alt="gym8">
+          </div>
+        </div>
+          <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
+        </div>
+      </div>
+    <div class="col-md-12 col-lg-6 d-inline-block">
+      <h3>Our facilities</h3>
+      <ul>
+        <li>State-of-the-art cardiovascular and resistance training equipment</li>
+        <li>Unique cryotherapy treatment room</li>
+        <li>Lounge area with phone charging stations</li>
+        <li>Rental shoe lockers</li>
+        <li>Free usage of boxing gloves and wraps</li>
+        <li>Complimentary towel service</li>
+        <li>Free wifi access</li>
+        <li>12 free standing heavy bags</li>
+        <li>Spacious locker rooms with steam and sauna facilities</li>
+        <li>Over 20,500 sq ft space with world-class design features</li>
+        <li>InBody body composition analysis machine </li>
+        <li>2 competition-sized boxing rings</li>
       </ul>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-sm-12 d-sm-block d-md-none">
-    <img src="images/gym5.jpg" alt="gym5" style="width:100%">
+  <div class="row">
+    <div class="col-sm-12 d-md-block d-lg-none">
+      <img src="images/gym5.jpg" alt="gym5" style="width:100%">
+    </div>
+    <div class="col-sm-12 d-md-block d-lg-none">
+      <img src="images/gym6.jpg" alt="gym6" style="width:100%">
+    </div>
   </div>
-  <div class="col-sm-12 d-sm-block d-md-none">
-    <img src="images/gym6.jpg" alt="gym6" style="width:100%">
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-12">
-    <h3>Overview of our classes</h3>
-    <div class="accordion" id="accordion">
-      <div class="card">
-        <div class="card-header" id="headingOne">
-          <h2 class="mb-0">
-            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne"><i class="fas fa-play" id="fa"></i>
-          Taekwando
-            </button>
-          </h2>
-        </div>
-
-        <div id="collapseOne" class="collapse" data-parent="#accordion">
-          <div class="card-body">
-           Taekwando is a Korean martial art, characterized by its emphasis on head-height kicks, jumping and spinning kicks, and fast kicking techniques. It adopts stances that are narrower and taller than the broader, wide stances used by most other martial arts. The tradeoff of decreased stability is believed to be worth the commensurate increase in agility, particularly in Kukkiwon-style Taekwondo.
-          </div>
-        </div>
-      </div>
+  
+  <!--accordion for class descriptions-->
+  <div class="row">
+    <div class="col-sm-12">
+      <h3>Overview of our classes</h3>
+      <div class="accordion" id="accordion">
         <div class="card">
-        <div class="card-header" id="headingTwo">
-          <h2 class="mb-0">
-            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"> <i class="fas fa-play" id="fa"></i>
-              Muay Thai
-            </button>
-          </h2>
+          <div class="card-header" id="headingOne">
+            <h2 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne"><i class="fas fa-play" id="fa"></i>
+                Taekwando
+              </button>
+            </h2>
+          </div>
+
+          <div id="collapseOne" class="collapse" data-parent="#accordion">
+            <div class="card-body">
+              Taekwando is a Korean martial art, characterized by its emphasis on head-height kicks, jumping and spinning kicks, and fast kicking techniques. It adopts stances that are narrower and taller than the broader, wide stances used by most other martial arts. The tradeoff of decreased stability is believed to be worth the commensurate increase in agility, particularly in Kukkiwon-style Taekwondo.
+            </div>
+          </div>
         </div>
-        <div id="collapseTwo" class="collapse" data-parent="#accordion">
-          <div class="card-body">
-            Muay Thai is one of the most powerful and effective martial arts in the world. Developed over thousands of years, this ancient martial art of Thailand is known for its tremendous power, maximum efficiency, and raw simplicity. Muay Thai utilizes a beautiful symphony of kicks, punches, knees, and elbows with fluidity and grace. Muay Thai is often referred to as the “Art of Eight Limbs”. 
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h2 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"> <i class="fas fa-play" id="fa"></i>
+                Muay Thai
+              </button>
+            </h2>
+          </div>
+          <div id="collapseTwo" class="collapse" data-parent="#accordion">
+            <div class="card-body">
+              Muay Thai is one of the most powerful and effective martial arts in the world. Developed over thousands of years, this ancient martial art of Thailand is known for its tremendous power, maximum efficiency, and raw simplicity. Muay Thai utilizes a beautiful symphony of kicks, punches, knees, and elbows with fluidity and grace. Muay Thai is often referred to as the “Art of Eight Limbs”. 
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h2 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"><i class="fas fa-play" id="fa"></i>
+                MMA
+              </button>
+            </h2>
+          </div>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div class="card-body">
+              MMA is a challenging yet exhilarating full-contact sport that implements a combination of techniques from Brazilian Jiu-Jitsu, Wrestling, Muay Thai, and Boxing.
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingFour">
+            <h2 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour"><i class="fas fa-play" id="fa"></i>
+                Karate
+              </button>
+            </h2>
+          </div>
+          <div id="collapseFour" class="collapse" data-parent="#accordion">
+            <div class="card-body">
+               Karate is predominantly a striking art using punching, kicking, knee strikes, elbow strikes and open-hand techniques such as knife-hands, spear-hands and palm-heel strikes. It features both hard and soft techniques, utilizing direct strikes and circular movement to deflect attacks rather than trying to meet strength with strength. 
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingFive">
+            <h2 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive"><i class="fas fa-play" id="fa"></i>
+                Brazilian Ju-jitsu
+              </button>
+            </h2>
+          </div>
+          <div id="collapseFive" class="collapse" data-parent="#accordion">
+            <div class="card-body">
+              Ju-jitsu is founded on the concept that a smaller, weaker person can successfully defend themselves against a bigger, stronger, heavier opponent by using technique, leverage, and most notably, taking the fight to the ground, and then applying joint locks and chokeholds to defeat the opponent. Ju-jitsu training can be used for both sport grappling tournaments and self-defense situations.
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingSix">
+            <h2 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix"><i class="fas fa-play" id="fa"></i>
+                Boxing
+              </button>
+            </h2>
+          </div>
+          <div id="collapseSix" class="collapse" data-parent="#accordion">
+            <div class="card-body">
+              Boxing is one of the oldest and most efficient combat sports. Utilizing punches, footwork, and head movement, boxing is the sweet science of hitting without getting hit. Through proper body mechanics, boxing is as efficient as it is smooth in generating powerful punches and beautiful evasive defense.
+            </div>
           </div>
         </div>
       </div>
-    <div class="card">
-    <div class="card-header" id="headingThree">
-      <h2 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"><i class="fas fa-play" id="fa"></i>
-          MMA
-        </button>
-      </h2>
     </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-      <div class="card-body">
-        MMA is a challenging yet exhilarating full-contact sport that implements a combination of techniques from Brazilian Jiu-Jitsu, Wrestling, Muay Thai, and Boxing.
-      </div>
     </div>
   </div>
-    <div class="card">
-    <div class="card-header" id="headingFour">
-      <h2 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour"><i class="fas fa-play" id="fa"></i>
-          Karate
-        </button>
-      </h2>
-    </div>
-    <div id="collapseFour" class="collapse" data-parent="#accordion">
-      <div class="card-body">
-      Karate is predominantly a striking art using punching, kicking, knee strikes, elbow strikes and open-hand techniques such as knife-hands, spear-hands and palm-heel strikes. It features both hard and soft techniques, utilizing direct strikes and circular movement to deflect attacks rather than trying to meet strength with strength. 
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingFive">
-      <h2 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive"><i class="fas fa-play" id="fa"></i>
-          Brazilian Ju-jitsu
-        </button>
-      </h2>
-    </div>
-    <div id="collapseFive" class="collapse" data-parent="#accordion">
-      <div class="card-body">
-        Ju-jitsu is founded on the concept that a smaller, weaker person can successfully defend themselves against a bigger, stronger, heavier opponent by using technique, leverage, and most notably, taking the fight to the ground, and then applying joint locks and chokeholds to defeat the opponent. Ju-jitsu training can be used for both sport grappling tournaments and self-defense situations.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingSix">
-      <h2 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix"><i class="fas fa-play" id="fa"></i>
-          Boxing
-        </button>
-      </h2>
-    </div>
-    <div id="collapseSix" class="collapse" data-parent="#accordion">
-      <div class="card-body">
-           Boxing is one of the oldest and most efficient combat sports. Utilizing punches, footwork, and head movement, boxing is the sweet science of hitting without getting hit. Through proper body mechanics, boxing is as efficient as it is smooth in generating powerful punches and beautiful evasive defense.
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-</div>
 </body>
 </html>
