--- a/pricing.html
+++ b/pricing.html
@@ -87,7 +87,7 @@
         <br>
         <h3>Corporate programs</h3>
         <p>At Ninja Gym, we believe that a healthy workplace equals a healthy business. Through our diverse range of martial arts programs, we will  help your employees achieve good health, fitness, mental strength, confidence, and a balanced life, which leads to increased employee productivity and enhanced profitability. Consider it an investment in your most valuable asset, your employees.</p>
-        <a class="button enquire" href="#linkForm">Enquire now!</a>
+        <a class="button enquire" href="contact.html#linkForm">Enquire now!</a>
       </div>
     </div>
   </div>
