--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
           <div class="modal-body">
             Complete the form below and start your Ninja journey today.<br><br>
             <div class="contactform">
-              <form action="https://formspree.io/email@domain.tld" method="POST" />
+              <form action="https://formspree.io/lianyz.jessica@gmail.com" method="POST" />
                 <fieldset>
                   <input id="firstname" name="firstname" type="text" placeholder="Name" required>
                   <input id="lastname" name="lastname" type="text" placeholder="Surname" required><br><br>
-                  <input id="phone" name="phone" type="number" maxlength="8" minlength="8" placeholder="Mobile number" required>
-                  <input id="email" name="email" placeholder="Email address" required><br><br>
+                  <input id="phone" name="phone" type="number" max="8" min="8" placeholder="Mobile number" required>
+                  <input id="email" name="email" type="email" placeholder="Email address" required><br><br>
                   <input type="submit" value="Submit" data-dismiss="modal" id="submit">
+                </fieldset>
+              </form>
             </div>
           </div>
         </div>
@@ -104,8 +106,8 @@
     <a class="button" href="instructors.html">Meet the team</a>
   </div>
   </div>
-  <div class="hiddenMD">
-
+  
+<div class="hiddenMD">
 <!--gym-->
   <div class="jumbotron jumbotron-fluid" id="Header1">
     <div class="container">
@@ -554,6 +556,7 @@
           <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
             Wed
           </button>
+        <!--centered so that it does not extend out of screen width-->
         <div class="dropdown-menu dropdown-menu-center">
           <table class="dropdown-item table-hover">
             <tr>
@@ -622,6 +625,7 @@
           <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Fri
           </button>
+        <!--drops on right side so that it does not extend out of screen width-->
         <div class="dropdown-menu dropdown-menu-right">
           <table class="dropdown-item table-hover">
             <tr>
@@ -724,7 +728,7 @@
     <div class="space"><br><br><br><br><br><br><br></space></div>
     </div>
   
-  <!--table for lg view-->
+  <!--table for desktop view-->
   <div class="row" id="table">
     <div class="col-sm-12 table-responsive d-none d-md-block">
       <table class="schedule">
@@ -972,9 +976,9 @@
         <p>Start your Ninja journey with a Complimentary Introductory Class of your choice! Experience and learn the basic techniques with our professional instructors - we guaranteed you will be hooked!</p>
           <ul>
             <li><a href="mailto:someone@example.com"><i class="fas fa-envelope-open-text" id="fa"></i>  ninjagymsg@gmail.com</a></li>
-            <li><a href="https://www.google.com/"><i class="fab fa-facebook" style="color:#3b5998" id="fa"></i> facebook.com/fightclub</a></li>
-            <li><a href="https://www.google.com/"><i class="fab fa-twitter" style="color:#1da1f2" id="fa"></i>   https://t.co/HyNW4tByaR</a></li>
-            <li><a href="https://www.google.com/"><i class="fab fa-instagram" style="color:red" id="fa"></i>  @fightclubsg</a></li>
+            <li><a href="https://www.facebook.com/"><i class="fab fa-facebook" style="color:#3b5998" id="fa"></i> facebook.com/fightclub</a></li>
+            <li><a href="https://twitter.com/"><i class="fab fa-twitter" style="color:#1da1f2" id="fa"></i>   https://t.co/HyNW4tByaR</a></li>
+            <li><a href="https://www.instagram.com/"><i class="fab fa-instagram" style="color:red" id="fa"></i>  @fightclubsg</a></li>
             <li><i class="fas fa-phone-volume" style="color:green"  id="fa"></i>  +65 9480 8908</li>
             <li><i class="far fa-clock" style="color:orange"  id="fa"></i></a> Fri - Tues: 8am to 9pm</li>
             <li id="hidden"><i class="far fa-clock" style="color:transparent"  id="fa"></i> Wed - Thurs: 8am to 6pm </li>
@@ -984,12 +988,12 @@
         <h3>Contact form</h3>
         <p>Or if you prefer, leave your contact information and we will get back to you ASAP.</p>
           <div class="contactform">
-            <form action="https://formspree.io/email@domain.tld" method="POST" />
+            <form action="https://formspree.io/lianyz.jessica@gmail.com" method="POST" />
               <fieldset>
                 <input id="firstname" name="firstname" type="text" placeholder="Name" required><br><br>
                 <input id="lastname" name="lastname" type="text" placeholder="Surname" required><br><br>
-                <input id="phone" name="phone" type="number" maxlength="8" minlength="8" placeholder="Mobile number" required><br><br>
-                <input id="email" name="email" placeholder="Email address" required><br><br>
+                <input id="phone" name="phone" type="number" max="8" min="8" placeholder="Mobile number" required><br><br>
+                <input id="email" name="email" type="email" placeholder="Email address" required><br><br>
                 <label for="time">*Experience level:</label>
                 <select name="experience" id="experience" required>
                   <option value="beginner"></option>
