edited form min/max length

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <fieldset>
                   <input id="firstname" name="firstname" type="text" placeholder="Name" required>
                   <input id="lastname" name="lastname" type="text" placeholder="Surname" required><br><br>
-                  <input id="phone" name="phone" type="number" max="8" min="8" placeholder="Mobile number" required>
+                  <input id="phone" name="phone" type="number" maxlength="8" minlength="8" placeholder="Mobile number" required>
                   <input id="email" name="email" type="email" placeholder="Email address" required><br><br>
                   <input type="submit" value="Submit" data-dismiss="modal" id="submit">
                 </fieldset>
@@ -992,7 +992,7 @@
               <fieldset>
                 <input id="firstname" name="firstname" type="text" placeholder="Name" required><br><br>
                 <input id="lastname" name="lastname" type="text" placeholder="Surname" required><br><br>
-                <input id="phone" name="phone" type="number" max="8" min="8" placeholder="Mobile number" required><br><br>
+                <input id="phone" name="phone" type="number" maxlength="8" minlength="8" placeholder="Mobile number" required><br><br>
                 <input id="email" name="email" type="email" placeholder="Email address" required><br><br>
                 <label for="time">*Experience level:</label>
                 <select name="experience" id="experience" required>
