--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
               <fieldset>
                 <input id="firstname" name="firstname" type="text" placeholder="Name" required><br><br>
                 <input id="lastname" name="lastname" type="text" placeholder="Surname" required><br><br>
-                <input id="phone" name="phone" type="number" max="8" min="8" placeholder="Mobile number" required><br><br>
+                <input id="phone" name="phone" type="number" maxlength="8" minlength="8" placeholder="Mobile number" required><br><br>
                 <input id="email" name="email" type="email" placeholder="Email address" required><br><br>
                 <label for="time">*Experience level:</label>
                 <select name="experience" id="experience" required>
